...
    <string name="title_activity_client_profile" translatable="false">ClientProfile</string>
    <string name="title_activity_save" translatable="false">SaveTicket</string>
    <string name="title_activity_ticket_detail" translatable="false">TicketDetail</string>
    <string name="create_ticket_disabled_message" translatable="false">Disabled</string>
    <string name="static_shortcut_long_label" translatable="false">Create a new ticket</string>
    <string name="static_shortcut_short_label" translatable="false">Create ticket</string>
    <string name="drawer_open" translatable="false">Open</string>
    <string name="drawer_close" translatable="false">Close</string>

    <string name="title_activity_main" translatable="false">Faveo</string>
    <string name="create_ticket">Create ticket</string>
    <string name="my_tickets">My tickets</string>
    <string name="unassigned_tickets">Unassigned tickets</string>
    <string name="closed_tickets">Closed tickets</string>
    <string name="client_list">Client list</string>
    <!--<string name="setting">Settings</string>-->
    <string name="about">About</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_notification">Notifications</string>

    <string name="search_hint">Search…</string>
    <string name="just_now">Just now</string>
    <string name="title_activity_create_ticket" translatable="false">CreateTicketActivity</string>
    <string name="title_activity_search" translatable="false">SearchActivity</string>
    <string name="blue_name" translatable="false">blue</string>
...
    <string name="status">Status</string>
    <string name="email">Requestor/Email id </string>
    <string name="email1">Email</string>
    <string name="helpdesk_url">Helpdesk URL</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="api_key_optional">API Key(Optional)</string>
    <string name="empty_username">Empty username</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="inbox">Inbox</string>
    <string name="loading">Loading…</string>
    <string name="message">Message</string>
...
    <string name="due_date">Due Date</string>
    <string name="created_date">Created Date</string>
    <string name="assigneeName">Agent Name</string>

    <string name="save">Save Changes</string>
    <string name="trash">Trash</string>
    <string name="logout">Logout</string>
    <string name="ticket_list">Ticket list</string>
    <string name="no_records">No Records!</string>
    <string name="no_tickets">No tickets found!</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="send_crash_reports">Send crash reports</string>
    <string name="crash_reports">CRASH REPORTS</string>
...
    <string name="creating_note">Creating note</string>
    <string name="wrong_user_id">Wrong userID</string>
    <string name="sending_msg">Sending message</string>
    <string name="internal_notes_posted">Internal notes posted</string>
    <string name="posted_reply">Posted your reply</string>
    <string name="conversation">Conversation</string>
    <string name="detail">Details</string>
    <string name="open_ticket">OPEN TICKET</string>
    <string name="closed_ticket">CLOSED TICKET</string>
    <string name="ticket_type" translatable="false">Ticket Type </string>
    <string name="mobile" translatable="false">Mobile</string>
    <string name="name" translatable="false">Name</string>
    <string name="only_special_characters_not_allowed_here">Only special characters not allowed here</string>
    <!--<string name="sub_must_not_exceed">Subject must not exceed 100 characters</string>-->
    <string name="please_select_some_priority">Please select some Priority</string>
...
    <string name="assignTicket">Assign Ticket</string>
    <string name="multiAssign">Select two or more tickets to assign</string>
    <string name="successfullyAssigned">Successfully assigned those tickets</string>
    <string name="helpSection">HelpSection</string>
    <string name="login">Login</string>
    <string name="logginginto">Logging into the android app</string>
    <string name="ticket">Tickets</string>
    <string name="managingTickets">Managing tickets in android app</string>
    <string name="userDirectory">How to use the user directory</string>
    <string name="userAndAgent">Users and agents</string>
    <string name="other">Other features</string>
    <string name="someOtheroptions">How to use some other features</string>
    <string name="loggingIn">Logging in and logging out of the android app</string>
    <string name="settings">Settings</string>
    <string name="logginginandout">Logging in and logging out of the Android app</string>
    <string name="LoggingIn">1. Logging in and logging out</string>
    <string name="logincontent">The Android app for Faveo lets you support your customer anytime from your smartphone or tablet
        device.This solution will be a step-by-step walkthrough explaining to you everything you can do with the app. </string>
    <string name="toLogIn">To log in into your app you need to use your helpdesk domain name,your agent email address and password.
        Your domain name would be just the vanity URL where your helpdesk is present just an example support.yourcompany.com.</string>
...
