...
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/email_edittext"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@android:color/transparent"
                        android:cursorVisible="true"
...
                        android:layout_marginRight="16dp"
                        android:maxLines="3"
                        android:fontFamily="@font/hintedlainesansregular"
                        android:background="@android:color/transparent"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:nextFocusForward="@+id/fname_edittext"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="16sp"

                        />
                </LinearLayout>
                <View
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/sub_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@android:color/transparent"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/hintedlainesansregular"
                    android:nextFocusForward="@+id/msg_edittext"
                    android:nextFocusDown="@+id/spinner_pri"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="16sp" />
            </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
...
                <Spinner
                    android:id="@+id/spinner_pri"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:nextFocusForward="@+id/spinner_help"
                    android:entries="@array/spinnerAssignTo"
                    android:hint="@string/SelectPriority"/>
            </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
...

                <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content">-->

                    <!--<Spinner-->
                        <!--android:id="@+id/spinner_type"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="50dp"-->
                        <!--android:layout_marginLeft="16dp"-->
                        <!--android:layout_marginStart="16dp"-->
                        <!--android:nextFocusForward="@+id/spinner_help"-->
                        <!--android:entries="@array/spinnerAssignTo"-->
...
                        android:background="@color/faveo"
                        android:src="@drawable/ic_clear_black_18dp"
                        android:tint="@color/colorAccent" />
                </RelativeLayout>

                <Button
                    android:id="@+id/buttonSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:textColor="#ffffff"
                    android:background="@drawable/rectangle3"
...
