...
                HTMLCode:showAsAction="ifRoom|withText" />

            <item android:id="@+id/helptopichigh"
                android:title="High"
                HTMLCode:showAsAction="ifRoom|withText" />
            <item android:id="@+id/helptopicnormal"
                android:title="Normal"
                HTMLCode:showAsAction="ifRoom|withText" />
            <item android:id="@+id/helptopiclow"
                android:title="Low"
                HTMLCode:showAsAction="ifRoom|withText" />
        </menu>
    </item>

    <item
        android:id="@+id/action_filtersource"
...
            android:title="Incident"
            HTMLCode:showAsAction="ifRoom|withText" />
            <item android:id="@+id/problem"
                android:title="Problem"
                HTMLCode:showAsAction="ifRoom|withText" />
            <item android:id="@+id/question"
                android:title="Question"
                HTMLCode:showAsAction="ifRoom|withText" />

        </menu>
    </item>


...
