//package co.helpdesk.faveo.pro.frontend.activities;
//
//
//import android.support.test.espresso.ViewInteraction;
//import android.support.test.rule.ActivityTestRule;
//import android.support.test.runner.AndroidJUnit4;
//import android.test.suitebuilder.annotation.LargeTest;
//import android.view.View;
//import android.view.ViewGroup;
//import android.view.ViewParent;
//
//import org.hamcrest.Description;
//import org.hamcrest.Matcher;
//import org.hamcrest.TypeSafeMatcher;
//import org.junit.Rule;
//import org.junit.Test;
//import org.junit.runner.RunWith;
//
//import co.helpdesk.faveo.pro.R;
//
//import static android.support.test.espresso.Espresso.onView;
//import static android.support.test.espresso.Espresso.pressBack;
//import static android.support.test.espresso.action.ViewActions.click;
//import static android.support.test.espresso.action.ViewActions.closeSoftKeyboard;
//import static android.support.test.espresso.action.ViewActions.replaceText;
//import static android.support.test.espresso.action.ViewActions.scrollTo;
//import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
//import static android.support.test.espresso.matcher.ViewMatchers.withClassName;
//import static android.support.test.espresso.matcher.ViewMatchers.withContentDescription;
//import static android.support.test.espresso.matcher.ViewMatchers.withId;
//import static android.support.test.espresso.matcher.ViewMatchers.withParent;
//import static android.support.test.espresso.matcher.ViewMatchers.withText;
//import static org.hamcrest.Matchers.allOf;
//import static org.hamcrest.Matchers.is;
//
//@LargeTest
//@RunWith(AndroidJUnit4.class)
//public class FaveoUnitTestCase {
//
//    @Rule
//    public ActivityTestRule<LoginActivity> mActivityTestRule = new ActivityTestRule<>(LoginActivity.class);
//
//    @Test
//    public void faveoUnitTestCase() {
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(60000);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction appCompatAutoCompleteTextView = onView(
//                allOf(withId(R.id.editText_company_url), isDisplayed()));
//        appCompatAutoCompleteTextView.perform(replaceText("http://"), closeSoftKeyboard());
//
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(60000);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction appCompatAutoCompleteTextView2 = onView(
//                allOf(withId(R.id.editText_company_url), withText("http://"), isDisplayed()));
//        appCompatAutoCompleteTextView2.perform(click());
//
//        ViewInteraction appCompatAutoCompleteTextView3 = onView(
//                allOf(withId(R.id.editText_company_url), withText("http://"), isDisplayed()));
//        appCompatAutoCompleteTextView3.perform(replaceText("http://jamboreebliss.com/sayarnew/public"), closeSoftKeyboard());
//
//        ViewInteraction floatingActionButton = onView(
//                allOf(withId(R.id.fab_verify_url), isDisplayed()));
//        floatingActionButton.perform(click());
//
//        ViewInteraction appCompatEditText = onView(
//                allOf(withId(R.id.input_username), isDisplayed()));
//        appCompatEditText.perform(replaceText("sayar_samanta "), closeSoftKeyboard());
//
//        pressBack();
//
//        ViewInteraction appCompatEditText2 = onView(
//                allOf(withId(R.id.input_password), isDisplayed()));
//        appCompatEditText2.perform(replaceText("home@1234"), closeSoftKeyboard());
//
//        pressBack();
//
//        ViewInteraction appCompatButton = onView(
//                allOf(withId(R.id.button_signin), withText("Sign In")));
//        appCompatButton.perform(scrollTo(), click());
//
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(604800000);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction appCompatImageButton = onView(
//                allOf(withContentDescription("Open"),
//                        withParent(allOf(withId(R.id.toolbar),
//                                withParent(withId(R.id.appBarLayout)))),
//                        isDisplayed()));
//        appCompatImageButton.perform(click());
//
//        ViewInteraction linearLayout = onView(
//                withId(R.id.create_ticket));
//        linearLayout.perform(scrollTo(), click());
//
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(3573911);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction appCompatEditText3 = onView(
//                allOf(withId(R.id.fname_edittext), isDisplayed()));
//        appCompatEditText3.perform(replaceText("sayar "), closeSoftKeyboard());
//
//        ViewInteraction appCompatEditText4 = onView(
//                allOf(withId(R.id.lname_edittext), isDisplayed()));
//        appCompatEditText4.perform(replaceText("samanta "), closeSoftKeyboard());
//
//        ViewInteraction appCompatEditText5 = onView(
//                allOf(withId(R.id.email_edittext), isDisplayed()));
//        appCompatEditText5.perform(replaceText("sayarsamanta@gmail.com"), closeSoftKeyboard());
//
//        ViewInteraction appCompatButton2 = onView(
//                allOf(withId(R.id.buttonSubmit), withText("submit"),
//                        withParent(withId(R.id.toolbar)),
//                        isDisplayed()));
//        appCompatButton2.perform(click());
//
//        ViewInteraction appCompatEditText6 = onView(
//                allOf(withId(R.id.phone_edittext), isDisplayed()));
//        appCompatEditText6.perform(replaceText("8981692638"), closeSoftKeyboard());
//
//        ViewInteraction searchAutoComplete = onView(
//                allOf(withClassName(is("android.widget.SearchView$SearchAutoComplete")),
//                        withParent(allOf(withClassName(is("android.widget.LinearLayout")),
//                                withParent(withClassName(is("android.widget.LinearLayout"))))),
//                        isDisplayed()));
//        searchAutoComplete.perform(click());
//
//        ViewInteraction searchAutoComplete2 = onView(
//                allOf(withClassName(is("android.widget.SearchView$SearchAutoComplete")),
//                        withParent(allOf(withClassName(is("android.widget.LinearLayout")),
//                                withParent(withClassName(is("android.widget.LinearLayout"))))),
//                        isDisplayed()));
//        searchAutoComplete2.perform(replaceText("in"), closeSoftKeyboard());
//
//        ViewInteraction appCompatTextView = onView(
//                allOf(withId(android.R.id.text1), withText("India,91"),
//                        childAtPosition(
//                                withId(R.id.listItems),
//                                1),
//                        isDisplayed()));
//        appCompatTextView.perform(click());
//
//        ViewInteraction appCompatSpinner = onView(
//                allOf(withId(R.id.spinner_pri), isDisplayed()));
//        appCompatSpinner.perform(click());
//
//        ViewInteraction appCompatCheckedTextView = onView(
//                allOf(withId(android.R.id.text1), withText("Low"), isDisplayed()));
//        appCompatCheckedTextView.perform(click());
//
//        ViewInteraction appCompatSpinner2 = onView(
//                allOf(withId(R.id.spinner_help), isDisplayed()));
//        appCompatSpinner2.perform(click());
//
//        ViewInteraction appCompatCheckedTextView2 = onView(
//                allOf(withId(android.R.id.text1), withText("Support query"), isDisplayed()));
//        appCompatCheckedTextView2.perform(click());
//
//        ViewInteraction appCompatEditText7 = onView(
//                allOf(withId(R.id.sub_edittext), isDisplayed()));
//        appCompatEditText7.perform(replaceText("ticket questions"), closeSoftKeyboard());
//
//        ViewInteraction appCompatEditText8 = onView(
//                allOf(withId(R.id.msg_edittext), isDisplayed()));
//        appCompatEditText8.perform(replaceText("status of the ticket "), closeSoftKeyboard());
//
//        ViewInteraction appCompatButton3 = onView(
//                allOf(withId(R.id.buttonSubmit), withText("submit"),
//                        withParent(withId(R.id.toolbar)),
//                        isDisplayed()));
//        appCompatButton3.perform(click());
//
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(604800000);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction appCompatImageButton2 = onView(
//                allOf(withContentDescription("Open"),
//                        withParent(allOf(withId(R.id.toolbar),
//                                withParent(withId(R.id.appBarLayout)))),
//                        isDisplayed()));
//        appCompatImageButton2.perform(click());
//
//        ViewInteraction actionMenuItemView = onView(
//                allOf(withId(R.id.action_noti), withContentDescription("Notifications"), isDisplayed()));
//        actionMenuItemView.perform(click());
//
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(604800000);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction appCompatImageButton3 = onView(
//                allOf(withContentDescription("Navigate up"),
//                        withParent(withId(R.id.toolbar)),
//                        isDisplayed()));
//        appCompatImageButton3.perform(click());
//
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(604800000);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction appCompatImageButton4 = onView(
//                allOf(withContentDescription("Open"),
//                        withParent(allOf(withId(R.id.toolbar),
//                                withParent(withId(R.id.appBarLayout)))),
//                        isDisplayed()));
//        appCompatImageButton4.perform(click());
//
//        ViewInteraction cardView = onView(
//                allOf(withId(R.id.ticket),
//                        withParent(allOf(withId(R.id.cardList),
//                                withParent(withId(R.id.swipeRefresh)))),
//                        isDisplayed()));
//        cardView.perform(click());
//
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(3600000);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction cardView2 = onView(
//                allOf(withId(R.id.thread), isDisplayed()));
//        cardView2.perform(click());
//
//        ViewInteraction cardView3 = onView(
//                allOf(withId(R.id.thread), isDisplayed()));
//        cardView3.perform(click());
//
//        ViewInteraction cardView4 = onView(
//                allOf(withId(R.id.thread), isDisplayed()));
//        cardView4.perform(click());
//
//        ViewInteraction cardView5 = onView(
//                allOf(withId(R.id.thread), isDisplayed()));
//        cardView5.perform(click());
//
//        ViewInteraction appCompatTextView2 = onView(
//                allOf(withText("Details"), isDisplayed()));
//        appCompatTextView2.perform(click());
//
//        ViewInteraction appCompatSpinner3 = onView(
//                withId(R.id.spinner_priority));
//        appCompatSpinner3.perform(scrollTo(), click());
//
//        ViewInteraction appCompatCheckedTextView3 = onView(
//                allOf(withId(android.R.id.text1), withText("Normal"), isDisplayed()));
//        appCompatCheckedTextView3.perform(click());
//
//        ViewInteraction appCompatSpinner4 = onView(
//                withId(R.id.spinner_type));
//        appCompatSpinner4.perform(scrollTo(), click());
//
//        ViewInteraction appCompatCheckedTextView4 = onView(
//                allOf(withId(android.R.id.text1), withText("Question"), isDisplayed()));
//        appCompatCheckedTextView4.perform(click());
//
//        ViewInteraction appCompatButton4 = onView(
//                allOf(withId(R.id.button_save), withText("Save")));
//        appCompatButton4.perform(scrollTo(), click());
//
//        ViewInteraction appCompatImageButton5 = onView(
//                allOf(withContentDescription("Navigate up"),
//                        withParent(allOf(withId(R.id.toolbar),
//                                withParent(withId(R.id.appbar)))),
//                        isDisplayed()));
//        appCompatImageButton5.perform(click());
//
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(3600000);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction appCompatImageButton6 = onView(
//                allOf(withContentDescription("Open"),
//                        withParent(allOf(withId(R.id.toolbar),
//                                withParent(withId(R.id.appBarLayout)))),
//                        isDisplayed()));
//        appCompatImageButton6.perform(click());
//
//        ViewInteraction linearLayout2 = onView(
//                withId(R.id.client_list));
//        linearLayout2.perform(scrollTo(), click());
//
//        ViewInteraction relativeLayout = onView(
//                allOf(withId(R.id.client),
//                        withParent(allOf(withId(R.id.cardList),
//                                withParent(withId(R.id.swipeRefresh)))),
//                        isDisplayed()));
//        relativeLayout.perform(click());
//
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(3574803);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction appCompatTextView3 = onView(
//                allOf(withText("CLOSED TICKET"), isDisplayed()));
//        appCompatTextView3.perform(click());
//
//        ViewInteraction appCompatImageButton7 = onView(
//                allOf(withContentDescription("Navigate up"),
//                        withParent(withId(R.id.toolbar)),
//                        isDisplayed()));
//        appCompatImageButton7.perform(click());
//
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(3585583);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction appCompatImageButton8 = onView(
//                allOf(withContentDescription("Open"),
//                        withParent(allOf(withId(R.id.toolbar),
//                                withParent(withId(R.id.appBarLayout)))),
//                        isDisplayed()));
//        appCompatImageButton8.perform(click());
//
//        ViewInteraction relativeLayout2 = onView(
//                withId(R.id.my_tickets));
//        relativeLayout2.perform(scrollTo(), click());
//
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(604800000);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction cardView6 = onView(
//                allOf(withId(R.id.ticket),
//                        withParent(allOf(withId(R.id.cardList),
//                                withParent(withId(R.id.swipeRefresh)))),
//                        isDisplayed()));
//        cardView6.perform(click());
//
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(604800000);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction appCompatImageButton9 = onView(
//                allOf(withContentDescription("Navigate up"),
//                        withParent(allOf(withId(R.id.toolbar),
//                                withParent(withId(R.id.appbar)))),
//                        isDisplayed()));
//        appCompatImageButton9.perform(click());
//
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(604800000);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction appCompatImageButton10 = onView(
//                allOf(withContentDescription("Open"),
//                        withParent(allOf(withId(R.id.toolbar),
//                                withParent(withId(R.id.appBarLayout)))),
//                        isDisplayed()));
//        appCompatImageButton10.perform(click());
//
//        ViewInteraction linearLayout3 = onView(
//                withId(R.id.settings));
//        linearLayout3.perform(scrollTo(), click());
//
//        ViewInteraction appCompatImageButton11 = onView(
//                allOf(withContentDescription("Open"),
//                        withParent(allOf(withId(R.id.toolbar),
//                                withParent(withId(R.id.appBarLayout)))),
//                        isDisplayed()));
//        appCompatImageButton11.perform(click());
//
//        ViewInteraction linearLayout4 = onView(
//                withId(R.id.about));
//        linearLayout4.perform(scrollTo(), click());
//
//        ViewInteraction appCompatImageButton12 = onView(
//                allOf(withContentDescription("Open"),
//                        withParent(allOf(withId(R.id.toolbar),
//                                withParent(withId(R.id.appBarLayout)))),
//                        isDisplayed()));
//        appCompatImageButton12.perform(click());
//
//        ViewInteraction linearLayout5 = onView(
//                withId(R.id.logout));
//        linearLayout5.perform(scrollTo(), click());
//
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(3571677);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction appCompatAutoCompleteTextView4 = onView(
//                allOf(withId(R.id.editText_company_url), isDisplayed()));
//        appCompatAutoCompleteTextView4.perform(replaceText("http://"), closeSoftKeyboard());
//
//    }
//
//    private static Matcher<View> childAtPosition(
//            final Matcher<View> parentMatcher, final int position) {
//
//        return new TypeSafeMatcher<View>() {
//            @Override
//            public void describeTo(Description description) {
//                description.appendText("Child at position " + position + " in parent ");
//                parentMatcher.describeTo(description);
//            }
//
//            @Override
//            public boolean matchesSafely(View view) {
//                ViewParent parent = view.getParent();
//                return parent instanceof ViewGroup && parentMatcher.matches(parent)
//                        && view.equals(((ViewGroup) parent).getChildAt(position));
//            }
//        };
//    }
//}
